# hackathon_kzn

./: Dockerfile  README.md  bad_answers.json  head_answers.json  ildarkin_1.csv  new_data_3.json  pyproject.toml
app/: app.py  config.py  extensions.py  redis_conn.py
app/blueprints/: __init__.py
app/blueprints/answers/: __init__.py  neyrol.py  view.py
app/blueprints/exceptions/: __init__.py  view.py
app/blueprints/photos/: __init__.py  view.py
app/helpers/: __init__.py  redis_loaders.py
database/: __init__.py  pyproject.toml
database/alembic/versions/: 41421dbcfe49_.py  a8254de3dfdd_.py  c1557037736e_.py  cb4102d9df9d_.py
database/models/: __init__.py  db.py  dialog.py  photo.py
